# amqp-client-rust

./: .gitignore  Cargo.toml  README.md  temp.rs
.github/workflows/: run-tests.yml
amqp-client-rust/: Cargo.toml  README.md
amqp-client-rust/src/: api.rs  domain.rs  errors.rs  lib.rs  main.rs
amqp-client-rust/src/api/: callback.rs  channel.rs  connection.rs  consumers.rs  eventbus.rs
amqp-client-rust/src/domain/: config.rs  integration_event.rs  into_response.rs
amqp-client-rust/tests/: config_test.rs  integration_tests.rs
