[package]
name = "amqp-client-rust"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"
repository = "https://github.com/yunjhongwu/strong-type"
readme = "README.md"
authors = ["João Pedro Miranda C. Hluchan <berrytern@gmail.com>"]
categories = ["network-programming", "asynchronous"]
keywords = ["amqp", "rabbitmq", "async", "tokio", "lock-free", "reconnection"]

[dependencies]
amqprs = "1.5.1"
async-trait = "0.1.68"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
    "time",
    "macros",
] }
uuid = { version = "1.3.3", features = ["v4"] }
url = "2.2.2"