[package]
name = "amqp-client-rust"
version = "0.0.3-alpha.1"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"
repository = "https://github.com/berrytern/amqp-client-rust"
description = "An asynchronous AMQP client library for Rust, designed for high-performance communication with RabbitMQ. Features include automatic queue and exchange management, message publishing, subscribing, and RPC support."
readme = "README.md"
authors = ["João Pedro Miranda C. Hluchan <berrytern@gmail.com>"]
categories = ["network-programming", "asynchronous"]
keywords = ["amqp", "rabbitmq", "async", "tokio", "reconnection"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
tls = [
    "amqprs/tls"
]


[dependencies]
amqprs = "1.5"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
    "time",
    "macros",
] }
uuid = { version = "1.3.3", features = ["v4"] }
url = "2.2.2"